[package]
name = "loki_text"
version = "0.1.3"
edition = "2021"
license="MIT"
repository="https://github.com/roquess/loki_text"
description="A Rust library for advanced string manipulation with pattern searching and replacement capabilities."


[dependencies]
regex = "1.11"
base64 = "0.22"
hex = "0.4"
aho-corasick = "1.1"
